fix print usage

--- a/zatch.1
+++ b/zatch.1
@@ -15,7 +15,7 @@ efficiently watches directory changes on macOS. It does this by coalescing all c
 The options are as follows:
 .Bl -tag -width Ds
 .It Fl h
-Show usage and exit.
+Print usage and exit.
 .It Fl p
 Preflight - echo the name of each dir on the command line once before starting
 to monitor.
