--- a/zatch.1
+++ b/zatch.1
@@ -6,7 +6,7 @@
 .Nd efficiently watch directory changes on macOS
 .Sh SYNOPSIS
 .Nm
-.Op Fl hp
+.Op Fl hps
 .Ar dir ...
 .Sh DESCRIPTION
 .Nm
@@ -17,8 +17,9 @@ The options are as follows:
 .It Fl h
 Print usage and exit.
 .It Fl p
-Preflight - echo the name of each dir on the command line once before starting
-to monitor.
+Preflight - echo the name of each dir on the command line once before starting to monitor.
+.It Fl s
+Show subdirs to narrow down where a change occurred. Note that this ensures a trailing "/" after the echoed dir. Furthermore, since all changes within 30 ms are coalesced, some changes might have occurred in a subdirectory of the one that is echoed.
 .It Ar dir
 One or more directories to watch.
 .El
