--- a/zatch.1
+++ b/zatch.1
@@ -20,6 +20,8 @@ Print usage and exit.
 Preflight - echo the name of each dir on the command line once before starting to monitor.
 .It Fl s
 Show subdirs to narrow down where a change occurred. Note that this ensures a trailing "/" after the echoed dir. Furthermore, since all changes within 30 ms are coalesced, some changes might have occurred in a subdirectory of the one that is echoed.
+.It Fl V
+Print version and exit.
 .It Ar dir
 One or more directories to watch.
 .El
