--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2018.06.23, Upcoming
+
+* Just skip non-directory entries on startup, don't fail
+* Code cleanup, style and tweaks
+
+
 2018.05.24, Version 1.0.0
 
 * stable release
