update node example

--- a/zatch.1
+++ b/zatch.1
@@ -80,7 +80,7 @@ done
 Initially start Node.js, and restart whenever a file changes in the current
 working dir or any of it's subdirectories:
 .Bd -literal -offset indent
-zatch -p . | while read p; do pkill node; node server.js & done
+node server.js & zatch . | while read -r p; do echo "$p" && kill $! ; node server.js & done
 .Ed
 .Sh AUTHORS
 .An -nosplit
